examples/kju/positive/arithmetic/operation_and_assigment.kju
fun kju():Unit{
	var x:Int=5;
	x+=3;
	x-=2;
}