examples/kju/negative/nameResolver/assigment_of_undeclared_variable.kju
fun kju():Unit{
    x=5;
}